web/app/src/assets/scss/pages/_index-page.scss
.index-page {
  display: flex;
  flex-direction: column;

  .navbar-container {
    @media (max-width: $sm) {
      display: flex;
      justify-content: space-between;
      left: 8px;
      position: fixed;
      right: 8px;
      top: 8px;
    }

    .navbar {
      align-items: center;
      display: flex;
      justify-content: space-between;

      &.navbar-mobile-open {
        align-items: flex-start;
        flex-direction: column;
        gap: 25px;
      }

      .section-links, .social-links {
        display: flex;
        gap: 25px;

        @media (max-width: $sm) {
          display: none;
          flex-direction: column;
        }

        &.d-flex {
          display: flex;
        }

        i {
          font-size: 22px;
        }
      }
    }

    .hamburger {
      display: none;

      i {
        font-size: 22px;
      }

      @media (max-width: $sm) {
        display: block;
      }
    }
  }

  header, section {
    align-items: center;
    display: flex;
    height: 100vh;
    justify-content: center;

    &.header {
      background: url("@assets/images/framed-nature.svg") no-repeat left;
      background-size: 125%;

      @media (max-width: $sm) {
        background-position: center;
        background-size: 60rem;
        text-align: center;
      }

      h1 {
        font-size: 5rem;
        margin-bottom: 1rem;
        margin-top: 0;
      }

      .profession {
        font-size: x-large;
        margin-bottom: 0;
        margin-top: 0;
      }
    }

    &:not(.header) {
      margin: auto;
      max-width: 55em;

      h2 {
        a {
          display: none;
        }

        &:hover {
          a {
            display: inline-flex;
          }
        }
      }

      &.technology-section {
        .technology-list {
          align-items: center;
          display: flex;
          flex-direction: row;
          flex-wrap: wrap;
          gap: 10px 20px;
        }
      }

      &.publications-section {
        .background-circles {
          align-items: center;
          display: flex;
          justify-content: center;
          opacity: 40%;
          z-index: -1;

          $bgCircleColors:
            1 $navy 20rem,
            2 $emerald 18rem,
            3 $malachite 16rem,
            4 $teal 14rem,
            5 $alabaster 12rem,
            6 $teal 10rem,
            7 $malachite 8rem,
            8 $emerald 6rem,
            9 $navy 4rem;

          @each $index, $color, $size in $bgCircleColors {
            div:nth-child(9n + #{$index}) {
              background-color: transparent;
              border: 3px $color solid;
              border-radius: 50%;
              height: $size;
              position: absolute;
              width: $size;
            }
          }
        }
      }

      &.npm-section {
        background: url("@assets/images/mountains.svg") no-repeat center;
      }

      &.github-section {
        .background-rectangles {
          align-items: center;
          display: flex;
          justify-content: center;
          opacity: 40%;
          z-index: -1;

          $bgTriangleColors:
            1 $navy 20rem 25rem,
            2 $emerald 18rem 23rem,
            3 $malachite 16rem 21rem,
            4 $teal 14rem 19rem,
            5 $alabaster 12rem 17rem,
            6 $teal 10rem 15rem,
            7 $malachite 8rem 13rem,
            8 $emerald 6rem 11rem,
            9 $navy 4rem 9rem;

          @each $index, $color, $height, $width in $bgTriangleColors {
            div:nth-child(9n + #{$index}) {
              background-color: transparent;
              border: 3px $color solid;
              height: $height;
              position: absolute;
              width: $width;
            }
          }
        }
      }
    }
  }
}

